--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,5 @@
 @import "./theme";
 @import "./components";
 @import "./layout";
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "./custom";
+@import "~bootstrap/scss/bootstrap";
