--- a/src/components/TopNavbar/_styles.module.scss
+++ b/src/components/TopNavbar/_styles.module.scss
@@ -1,21 +1,76 @@
 @import "../../scss/variable";
+@import "../../scss/mixins";
 
-.navbar-nav-menu-container {
-  .nav-item {
-    &:last-child {
-      button {
-        background-color: $SoftRed;
-        color: $white;
-        border-radius: 5px;
-        border: 1px solid transparent;
-        transition: color, border, background-color, 0.2s ease-in-out;
-        &:hover {
-          background-color: transparent;
-          color: $SoftRed;
-          border: 1px solid $SoftRed;
-          outline: none;
+.navbar {
+  .navbar-nav-menu-container {
+    overflow-x: hidden;
+    .navbar-nav-menu {
+      @include max-breakpoint(md) {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        background-color: $Very-Dark-Blue;
+        justify-content: flex-start;
+        padding: 100px 50px 0;
+      }
+      .nav-item {
+        &:nth-child(4) {
+          button {
+            background-color: $SoftRed;
+            color: $white;
+            border-radius: 5px;
+            border: 1px solid transparent;
+            transition: color, border, background-color, 0.2s ease-in-out;
+            &:hover {
+              background-color: transparent;
+              color: $SoftRed;
+              border: 1px solid $SoftRed;
+              outline: none;
+            }
+          }
+        }
+        @include max-breakpoint(md) {
+          padding: 1rem;
+          border-top: 1px solid #ffffff5d;
+          border-bottom: 1px solid #ffffff5d;
+          a {
+            color: $white;
+          }
+
+          &:nth-child(2) {
+            border: none;
+          }
+          &:nth-child(4) {
+            align-self: center;
+            border: none;
+            width: 100%;
+            padding: 1.5rem 0;
+            z-index: 1;
+            button {
+              background-color: transparent;
+              border: 1px solid $white;
+              width: 100%;
+            }
+          }
+          &:last-child {
+            align-self: center;
+            border: none;
+            .nav-item-social {
+              a {
+                &:first-child {
+                  margin-right: 1rem;
+                }
+              }
+            }
+          }
         }
       }
+    }
+  }
+  .navbar-toggler {
+    @include max-breakpoint(md) {
+      z-index: 1;
     }
   }
 }
