--- a/src/components/TopNavbar/_styles.module.scss
+++ b/src/components/TopNavbar/_styles.module.scss
@@ -3,13 +3,13 @@
 
 .navbar {
   .navbar-nav-menu-container {
-    overflow-x: hidden;
     .navbar-nav-menu {
       @include max-breakpoint(md) {
         width: 100%;
         height: 100vh;
         position: absolute;
         top: 0;
+        right: 100%;
         background-color: $Very-Dark-Blue;
         justify-content: flex-start;
         padding: 100px 50px 0;
